[metadata]
name = petabvis
version = 0.0.0
description = Interactive visualization of PEtab problems
keywords = petab, visualization
url = https://github.com/ICB-DCM/petab-interactive-viz
project_urls =
    Bug Reports = https://github.com/ICB-DCM/petab-interactive-viz/issues
    Source = 'https://github.com/ICB-DCM/petab-interactive-viz
license = BSD-3-Clause License
classifiers =
    Development Status :: 3 - Alpha
    License :: OSI Approved :: BSD License

[options]
packages = find:
python_requires = >=3.7, <4
install_requires =
    pandas>=1.1.2
    petab>=0.1.8
    PySide2>=5.15.1
    PyYAML>=5.3.1
    pyqtgraph>=0.11.0

[options.entry_points]
console_scripts =
    petabvis=petabvis.main:main
